// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamburger component Should have open class when isOpen prop 1`] = `
<div>
  <button
    class="APMHamburger"
  >
    <div
      class="APMHamburger-inner APMHamburger-inner-open"
    />
  </button>
</div>
`;

exports[`Hamburger component Should not have open class when not isOpen prop 1`] = `
<div>
  <button
    class="APMHamburger"
  >
    <div
      class="APMHamburger-inner"
    />
  </button>
</div>
`;
